# src/kpo_dist_api/models.py
@@ -2,6 +2,7 @@ from __future__ import annotations
 
 from datetime import datetime
 
+from marshmallow_sqlalchemy import fields
 from sqlalchemy.orm import Mapped
 
 from kpo_dist_api.config import db, ma
@@ -12,26 +13,30 @@ def make_created_column():
 
 
 def make_modified_column():
-    return db.mapped_column(db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)
+    return db.mapped_column(
+        db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow
+    )
+
 
 # Association Tables for many-to-many relationships
 
-concert_song = db.Table('concert_song',
-                        db.Column('concert_id', db.Integer, db.ForeignKey('concert.id')),
-                        db.Column('song_id', db.Integer, db.ForeignKey('song.id'))
-                        )
+concert_song = db.Table(
+    "concert_song",
+    db.Column("concert_id", db.Integer, db.ForeignKey("concert.id")),
+    db.Column("song_id", db.Integer, db.ForeignKey("song.id")),
+)
 
 # SQLAlchemy Models that map Python objects to SQL commands
+
 
 class Concert(db.Model):
     # TODO: Can title be the primary_key?
     __tablename__ = "concert"
     id = db.mapped_column(db.Integer, primary_key=True)
     title = db.mapped_column(db.String(32), unique=True)
-    season = db.mapped_column(db.String(15)) # Eventually int for enum
+    season = db.mapped_column(db.String(15))  # Eventually int for enum
     songs: Mapped[list[Song]] = db.relationship(
-        secondary=concert_song,
-        back_populates="concerts"
+        secondary=concert_song, back_populates="concerts"
     )
     created = make_created_column()
     modified = make_modified_column()
@@ -39,30 +44,32 @@ class Concert(db.Model):
     def __repr__(self):
         return f'<Concert "{self.title}">'
 
-class Song (db.Model):
+
+class Song(db.Model):
     # TODO: Add composer and arranger as primary_keys
-    __tablename__= "song"
+    __tablename__ = "song"
     id = db.mapped_column(db.Integer, primary_key=True)
     title = db.mapped_column(db.String(32), unique=True)
     concerts: Mapped[list[Concert]] = db.relationship(
-        secondary=concert_song, 
-        back_populates='songs')
+        secondary=concert_song, back_populates="songs"
+    )
     created = make_created_column
     modified = make_modified_column
 
     def __repr__(self):
         return f'<Song "{self.title}">'
-    
 
     def __eq__(self, other):
-        print("-"*10, "\nSong.__eq__ accessed\n", "-"*10)
+        print("-" * 10, "\nSong.__eq__ accessed\n", "-" * 10)
         return isinstance(other, Song) and self.title == other.title
-    
+
     def __contains__(self, item):
-        print("-"*10, "\nSong.__contains__ accessed\n", "-"*10)
+        print("-" * 10, "\nSong.__contains__ accessed\n", "-" * 10)
         return item == self.title
 
+
 # Marshmallow schemas that (de)serialize data to/from the db
+
 
 class ConcertSchema(ma.SQLAlchemyAutoSchema):
     class Meta:
@@ -70,14 +77,19 @@ class ConcertSchema(ma.SQLAlchemyAutoSchema):
         load_instance = True
         sqla_session = db.session
 
+
 class SongSchema(ma.SQLAlchemyAutoSchema):
     class Meta:
         model = Song
         load_instance = True
         sqla_session = db.session
+        include_fk = True
+
+    concerts = fields.Nested(ConcertSchema, many=True)
+
 
 # Expose schemas to the other api files
-concert_schema = ConcertSchema() # read_one, e.g.
-concerts_schema = ConcertSchema(many=True) # read_all
+concert_schema = ConcertSchema()  # read_one, e.g.
+concerts_schema = ConcertSchema(many=True)  # read_all
 song_schema = SongSchema()
 songs_schema = SongSchema(many=True)
